# haskell-webshell

./: hwesh.cabal
app/: Main.hs
src/Wesh/: App.hs  Parser.hs  Storage.hs
tests/: Main.hs
