name:               hwesh
version:            0.1.0.0
synopsis:           Short description
description:
  Please see the README on GitHub at <https://github.com/lehins/haskell-webshell#readme>

homepage:           https://github.com/lehins/haskell-webshell
license:            BSD3
license-file:       LICENSE
author:             Alexey Kuleshevich
maintainer:         alexey@kuleshevi.ch
copyright:          2019 Alexey Kuleshevich
category:           Web, Shell, Terminal
build-type:         Simple
extra-source-files:
  cbits/resize.c
  cbits/resize.h
  CHANGELOG.md
  files/static/hterm_all.js
  files/static/wesh.css
  files/static/wesh.js
  files/vimtest.txt
  README.md

cabal-version:      >=1.10

library
  hs-source-dirs:     src
  exposed-modules:
    Wesh.App
    Wesh.Connect
    Wesh.Parser
    Wesh.Storage
    Wesh.Terminal
    Wesh.Types

  other-modules:
  build-depends:
      aeson
    , attoparsec
    , base              >=4.8 && <5
    , bytestring
    , conduit
    , cryptonite
    , http-types
    , mtl
    , persistent
    , resource-pool
    , rio
    , unix
    , websockets
    , yesod
    , yesod-core
    , yesod-static
    , yesod-websockets

  default-language:   Haskell2010
  default-extensions:
    NoImplicitPrelude
    NamedFieldPuns
    OverloadedStrings

  ghc-options:
    -Wall -Wcompat -Widentities -Wpartial-fields
    -Wredundant-constraints -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wunused-packages

  include-dirs:       cbits
  c-sources:          cbits/resize.c
  cc-options:         -Wall -Wextra -pedantic -std=c99

executable wesh
  hs-source-dirs:   app
  main-is:          Main.hs
  ghc-options:
    -Wall -Wcompat -Widentities -Wpartial-fields
    -Wredundant-constraints -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wunused-packages -rtsopts -threaded
    -with-rtsopts=-N

  build-depends:
      base
    , hwesh
    , optparse-applicative
    , persistent-sqlite
    , rio
    , rio-orphans
    , warp
    , yesod
    , yesod-static

  default-language: Haskell2010

test-suite tests
  type:               exitcode-stdio-1.0
  hs-source-dirs:     tests
  main-is:            Main.hs
  other-modules:
    Common
    Spec
    Wesh.ParserSpec

  build-depends:
      base
    , hspec
    , hwesh
    , QuickCheck
    , rio

  default-language:   Haskell2010
  default-extensions: NoImplicitPrelude
  ghc-options:
    -Wall -Wcompat -Widentities -Wpartial-fields
    -Wredundant-constraints -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Wunused-packages -fno-warn-orphans
    -threaded -with-rtsopts=-N2

source-repository head
  type:     git
  location: https://github.com/lehins/haskell-webshell
